--- a/src/main/webapp/NewsJobs.html
+++ b/src/main/webapp/NewsJobs.html
@@ -1,15 +1,11 @@
 <lift:surround with="tabbed">
 
     <lift:bind-at name="left tab">
-        <lift:NewsTab >
-            <STRONG>Hi there</STRONG>
-        </lift:NewsTab>
+            <lift:embed what="/templates-hidden/NewsTab"></lift:embed>
     </lift:bind-at>
 
     <lift:bind-at name="right tab">
-        <lift:JobsTab >
-            <STRONG>Hi there</STRONG>
-        </lift:JobsTab>
+            <lift:embed what="/templates-hidden/JobsTab"></lift:embed>
     </lift:bind-at>
 
 </lift:surround>
