Added user functionality

--- a/src/main/webapp/templates-hidden/default.html
+++ b/src/main/webapp/templates-hidden/default.html
@@ -51,36 +51,39 @@
 
 
   /* ]]> */
-  </style>
+    </style>
   </head>
   <body>
-    <div class="container">
+  <div class="container">
       <div class="column span-12 last" style="text-align: right">
-        <h1 class="alt"><STRONG>DON'T PANIC</STRONG><img alt="" id="ajax-loader" style="display:none; margin-bottom: 0px; margin-left: 5px" src="/images/ajax-loader.gif"/></h1>
+          <h1 class="alt"><STRONG>DON'T PANIC</STRONG><img alt="" id="ajax-loader"
+                                                           style="display:none; margin-bottom: 0px; margin-left: 5px"
+                                                           src="/images/ajax-loader.gif"/></h1>
       </div>
 
       <hr/>
 
       <div class="column span-5 colborder sidebar">
-        <hr class="space" />
-        <lift:Menu.builder />	
-        <div>
-          <lift:Msgs showAll="true"/>
-          <hr class="space" />
-        </div>
+          <hr class="space"/>
+          <lift:Menu.builder>
+              <div>
+                  <lift:Msgs showAll="true"/>
+                  <hr class="space"/>
+              </div>
+          </lift:Menu.builder>
       </div>
 
       <div class="column span-18 last">
-        <lift:bind name="content" />
+          <lift:bind name="content"></lift:bind>
       </div>
 
-      <hr />
+      <hr/>
       <div class="column span-23 last" style="text-align: center">
-        <h4 class="alt">
-          <a href="http://www.liftweb.net"><i>Lift</i></a> 
-	        is Copyright 2007-2010 WorldWide Conferencing, LLC.  Distributed under an Apache 2.0 License.</h4>
+          <h4 class="alt">
+              <a href="http://www.liftweb.net"><i>Lift</i></a>
+              is Copyright 2007-2010 WorldWide Conferencing, LLC. Distributed under an Apache 2.0 License.</h4>
       </div>
-      
-    </div>
+
+  </div>
   </body>
 </html>
