Made More work on the templating structure

--- a/src/main/webapp/templates-hidden/JobsTab.html
+++ b/src/main/webapp/templates-hidden/JobsTab.html
@@ -1,3 +1,7 @@
-<lift:JobsTab>
-    <STRONG>Hi there</STRONG>
-</lift:JobsTab>
+<lift:surround with="Tab" at="content">
+
+    <lift:JobsTab>
+        <STRONG>Hi there</STRONG>
+    </lift:JobsTab>
+
+</lift:surround>
