--- a/src/main/webapp/templates-hidden/MessagesTab.html
+++ b/src/main/webapp/templates-hidden/MessagesTab.html
@@ -1,3 +1,7 @@
-<lift:MessagesTab>
-    <STRONG>Hi there</STRONG>
-</lift:MessagesTab>
+<lift:surround with="Tab" at="content">
+
+    <lift:MessagesTab>
+        <STRONG>Hi there</STRONG>
+    </lift:MessagesTab>
+
+</lift:surround>
