--- a/src/main/webapp/templates-hidden/NewsTab.html
+++ b/src/main/webapp/templates-hidden/NewsTab.html
@@ -1,3 +1,7 @@
-<lift:NewsTab>
-    <STRONG>Hi there</STRONG>
-</lift:NewsTab>
+<lift:surround with="Tab" at="content">
+
+    <lift:NewsTab>
+        <STRONG>Hi there</STRONG>
+    </lift:NewsTab>
+
+</lift:surround>
