--- a/src/main/webapp/templates-hidden/PeopleTab.html
+++ b/src/main/webapp/templates-hidden/PeopleTab.html
@@ -1,3 +1,7 @@
-<lift:PeopleTab>
-    <STRONG>Hi there</STRONG>
-</lift:PeopleTab>
+<lift:surround with="Tab" at="content">
+
+    <lift:PeopleTab>
+        <STRONG>Hi there</STRONG>
+    </lift:PeopleTab>
+
+</lift:surround>
