Starting to make messages work

--- a/src/main/webapp/templates-hidden/MessagesTab.html
+++ b/src/main/webapp/templates-hidden/MessagesTab.html
@@ -1,12 +1,16 @@
 <lift:surround with="Tab" at="content">
 
+    <form>
+        To : <input type="text">
+    </form>
+
     <ul>
         <lift:MessagesTab.show>
             <li>
                 <STRONG>The subject goes here</STRONG>
-                <i>
-                    the message goes here
-                </i>
+                <p>
+                    <i>the message goes here</i>
+                </p>
             </li>
         </lift:MessagesTab.show>
     </ul>
