Messages Work!!!, disregard all the dumb broken shit but they WORK

--- a/src/main/webapp/templates-hidden/MessagesTab.html
+++ b/src/main/webapp/templates-hidden/MessagesTab.html
@@ -1,7 +1,13 @@
 <lift:surround with="Tab" at="content">
 
     <form>
-        To : <input type="text">
+        <lift:MessagesTab.ShowSend>
+            To : <input type="text" name="To"/>
+            <br/>
+            Body:<textarea rows="10" cols="40" name="Body"></textarea>
+            <br/>
+            <input type="submit" value="Submit"/>
+        </lift:MessagesTab.ShowSend>
     </form>
 
     <ul>
