--- a/src/main/webapp/templates-hidden/default.html
+++ b/src/main/webapp/templates-hidden/default.html
@@ -7,78 +7,9 @@
 		<title>MoMo</title>
     <lift:CSS.blueprint />
     <lift:CSS.fancyType />
+    <link href="/css/default.css" rel="stylesheet" type="text/css" />
     <script id="jquery" src="/classpath/jquery.js" type="text/javascript"/>
     <script id="json" src="/classpath/json.js" type="text/javascript"/>
-    <style type="text/css">
-/* <![CDATA[ */
-.edit_error_class {
-  display: block;
-  color: red;
-}
-
-.sidebar ul {
-	margin:0;
-	padding:0;
-	border-bottom:1px solid #ccc;
-}
-	 
-
-.sidebar ul li {
-	margin:0;
-	padding:0;
-	list-style:none;
-	border:1px solid #ccc;
-	border-bottom:none;
-}
-
-.sidebar ul li a {
-	display:block;
-	padding:3px;
-	text-indent:30px;
-	text-decoration:none;
-}
-
-.sidebar ul li span {
-	display:block;
-	padding:3px;
-	text-indent:30px;
-	text-decoration:none;
-}
-
-.sidebar ul li a:hover {
-	background-color: #eee;
-}
-
-.menu {
-	width: 100%;
-	height: 54px;
-	margin: 0px auto;
-}
-
-.menu ul {
-	margin: 0px;
-	padding: 12px 0px 0px 0px;
-	list-style: none;
-	text-align: center;
-}
-
-.menu li {
-	display: inline;
-	padding: 0px;
-	background: none;
-}
-
-.menu a {
-	padding: 0 18px 0px 18px;
-}
-
-.menu ul li a:hover {
-	background-color: #eee;
-}
-
-
-  /* ]]> */
-    </style>
   </head>
   <body>
   <div class="container">
