Fixed the limited char count on message bodys

--- a/src/main/webapp/templates-hidden/MessagesTab.html
+++ b/src/main/webapp/templates-hidden/MessagesTab.html
@@ -18,7 +18,7 @@
     <div class="message">
 
         <form>
-            <input type="button" id="ToggleForm" value="Compose Message"/>
+            <input type="button" id="ToggleForm" value="Compose Message" style="position:relative;left:20px;"/>
         </form>
 
         <form id="ComposeForm" style="display:none;">
@@ -34,10 +34,10 @@
         <ul>
             <lift:MessagesTab.show>
                 <li>
-                    <STRONG>The subject goes here</STRONG>
+                    <h6>The subject goes here</h6>
 
                     <p>
-                        <i>the message goes here</i>
+                        the message goes here
                     </p>
                 </li>
             </lift:MessagesTab.show>
