Fixed up the admin side a little bit

--- a/src/main/webapp/templates-hidden/default.html
+++ b/src/main/webapp/templates-hidden/default.html
@@ -23,7 +23,7 @@
 
       <div class="menu">
           <hr class="space"/>
-          <lift:Menu.builder>
+          <lift:Menu.builder group="public">
               <div>
                   <lift:Msgs showAll="true"/>
                   <hr class="space"/>
