--- a/src/main/webapp/templates-hidden/admin.html
+++ b/src/main/webapp/templates-hidden/admin.html
@@ -1,49 +1,57 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:lift="http://liftweb.net/">
-  <head>
-    <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-    <meta name="description" content="" />
-    <meta name="keywords" content="" />
-    
-		<title>MoMo</title>
-    <lift:CSS.blueprint />
-    <lift:CSS.fancyType />
-    <link href="/css/default.css" rel="stylesheet" type="text/css" />
+<head>
+    <meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
+    <meta name="description" content=""/>
+    <meta name="keywords" content=""/>
+
+    <title>MoMo</title>
+    <lift:CSS.blueprint/>
+    <lift:CSS.fancyType/>
+    <link href="/css/default.css" rel="stylesheet" type="text/css"/>
     <script id="jquery" src="/classpath/jquery.js" type="text/javascript"/>
     <script id="json" src="/classpath/json.js" type="text/javascript"/>
-  </head>
-  <body>
-  <div class="container">
-      <div class="column span-12 last" style="text-align: right">
-          <h1 class="alt"><STRONG>PANIC... YOU HAVE THE POWER</STRONG><img alt="" id="ajax-loader"
-                                                           style="display:none; margin-bottom: 0px; margin-left: 5px"
-                                                           src="/images/ajax-loader.gif"/></h1>
-      </div>
+</head>
+<body>
+<div class="container">
+    <div class="column span-12 last" style="text-align: right">
+        <h1 class="alt"><STRONG>PANIC... YOU HAVE THE POWER</STRONG><img alt="" id="ajax-loader"
+                                                                         style="display:none; margin-bottom: 0px; margin-left: 5px"
+                                                                         src="/images/ajax-loader.gif"/></h1>
+    </div>
 
-      <hr/>
+    <hr/>
 
-      <div class="menu">
-          <hr class="space"/>
-          <lift:Menu.builder>
-              <div>
-                  <lift:Msgs showAll="true"/>
-                  <hr class="space"/>
-              </div>
-          </lift:Menu.builder>
-      </div>
+    <div class="menu">
+        <hr class="space"/>
+        <lift:Menu.builder group="public">
+            <div>
+                <lift:Msgs showAll="true"/>
+                <hr class="space"/>
+            </div>
+        </lift:Menu.builder>
+    </div>
 
-      <hr/>
+    <hr/>
 
-      <div class="column span-24 last">
-          <lift:bind name="content"></lift:bind>
-      </div>
+    <div class="column span-6 colborder sidebar">
+        <hr class="space" />
+        <span class="lift:Menu.builder" group="control"></span>
 
-      <hr/>
-      <div class="column span-24 last" style="text-align: center">
-          <h4 class="alt">
-              <a href="http://www.liftweb.net"><i>Lift</i></a>
-              is Copyright 2007-2010 WorldWide Conferencing, LLC. Distributed under an Apache 2.0 License.</h4>
-      </div>
+        <div class="lift:Msgs?showAll=true"></div>
+        <hr class="space"/>
+    </div>
 
-  </div>
-  </body>
+    <div class="column span-17 last">
+        <div id="content">The main content will get bound here</div>
+    </div>
+
+    <hr/>
+    <div class="column span-24 last" style="text-align: center">
+        <h4 class="alt">
+            <a href="http://www.liftweb.net"><i>Lift</i></a>
+            is Copyright 2007-2010 WorldWide Conferencing, LLC. Distributed under an Apache 2.0 License.</h4>
+    </div>
+
+</div>
+</body>
 </html>
