people tab stuff

--- a/src/main/webapp/templates-hidden/PeopleTab.html
+++ b/src/main/webapp/templates-hidden/PeopleTab.html
@@ -1,7 +1,11 @@
 <lift:surround with="Tab" at="content">
 
-    <lift:PeopleTab>
-        <STRONG>Hi there</STRONG>
-    </lift:PeopleTab>
+    <ul>
+        <lift:PeopleTab.render>
+            <li>
+                <h6>The name goes here</h6>
+            </li>
+        </lift:PeopleTab.render>
+    </ul>
 
 </lift:surround>
