--- a/src/main/webapp/templates-hidden/NewsTab.html
+++ b/src/main/webapp/templates-hidden/NewsTab.html
@@ -1,7 +1,19 @@
 <lift:surround with="Tab" at="content">
 
     <lift:NewsTab>
-        <STRONG>Hi there</STRONG>
+        <ul>
+            <li>
+                <h6>Title Goes Here</h6>
+                <b>Contact Info Here</b>
+                <p>
+                    Date and Time information
+                </p>
+                <p>
+                    Summary goes here
+                </p>
+                <b>Posted by info here</b>
+            </li>
+        </ul>
     </lift:NewsTab>
 
 </lift:surround>
