--- a/src/main/webapp/templates-hidden/NewsTab.html
+++ b/src/main/webapp/templates-hidden/NewsTab.html
@@ -4,14 +4,14 @@
         <ul>
             <li>
                 <h6>Title Goes Here</h6>
-                <b>Contact Info Here</b>
-                <p>
+                <b id="contact">Contact Info Here</b>
+                <p id="dateTime">
                     Date and Time information
                 </p>
-                <p>
+                <p id="summary">
                     Summary goes here
                 </p>
-                <b>Posted by info here</b>
+                <b id="poster">Posted by info here</b>
             </li>
         </ul>
     </lift:NewsTab>
