Added code for job tap

--- a/src/main/webapp/templates-hidden/JobsTab.html
+++ b/src/main/webapp/templates-hidden/JobsTab.html
@@ -4,11 +4,11 @@
         <ul>
             <li>
                 <h6>Title Goes Here</h6>
-                <b>Contact Info Here</b>
+                <b id="contact">Contact Info Here</b>
                 <p>
                     Summary goes here
                 </p>
-                <b>Posted by info here</b>
+                <b id="poster">Posted by info here</b>
             </li>
         </ul>
     </lift:JobsTab>
