--- a/src/main/webapp/templates-hidden/default.html
+++ b/src/main/webapp/templates-hidden/default.html
@@ -12,6 +12,9 @@
     <script id="json" src="/classpath/json.js" type="text/javascript"/>
   </head>
   <body>
+	
+<div class="topbar" style="width: 100%; background: #111; border-bottom: 1px solid #333; margin: 0px; padding: 0px; height: 32px; color: #990000;"></div>
+  
   <div class="container">
       <div class="column span-12 last" style="text-align: right">
           <h1 class="alt"><STRONG>DON'T PANIC</STRONG><img alt="" id="ajax-loader"
