THE TABS WORK!!!!

--- a/src/main/webapp/Listing.html
+++ b/src/main/webapp/Listing.html
@@ -1,7 +1,19 @@
 <lift:surround with="default" at="content">
 
-    <lift:Listing >
-        <ul></ul>
+    <lift:Listing>
+        <h6>Title Goes Here</h6>
+        <hr/>
+        <b id="contact">Contact Info Here</b>
+        <hr/>
+        <p id="dateTime">
+            Date and Time information
+        </p>
+        <hr/>
+        <p id="summary">
+            Summary goes here
+        </p>
+        <hr/>
+        <b id="poster">Posted by info here</b>
     </lift:Listing>
 
 </lift:surround>
