Added code to link to listings

--- a/src/main/webapp/Listing.html
+++ b/src/main/webapp/Listing.html
@@ -1,19 +1,15 @@
 <lift:surround with="default" at="content">
 
-    <lift:Listing>
-        <h6>Title Goes Here</h6>
-        <hr/>
+    <lift:ListingDetails>
+        <h6 id="title">Title Goes Here</h6>
         <b id="contact">Contact Info Here</b>
-        <hr/>
         <p id="dateTime">
             Date and Time information
         </p>
-        <hr/>
         <p id="summary">
             Summary goes here
         </p>
-        <hr/>
         <b id="poster">Posted by info here</b>
-    </lift:Listing>
+    </lift:ListingDetails>
 
 </lift:surround>
