people tab stuff

--- a/src/main/webapp/profile/profile.html
+++ b/src/main/webapp/profile/profile.html
@@ -1,7 +1,10 @@
 <lift:surround with="default" at="content">
 
-    <lift:Profile.show >
-        <ul></ul>
-    </lift:Profile.show>
+    <lift:Profile>
+        <ul>
+            <h6 id=name>the name goes here</h6>
+            <p id=summary>the bio goes here</p>
+        </ul>
+    </lift:Profile>
 
 </lift:surround>
