Fixed URL params

--- a/src/main/webapp/Listing.html
+++ b/src/main/webapp/Listing.html
@@ -1,6 +1,6 @@
 <lift:surround with="default" at="content">
 
-    <lift:ListingDetails>
+    <lift:ListingDetails.showListing>
         <h6 id="title">Title Goes Here</h6>
         <b id="contact">Contact Info Here</b>
         <p id="dateTime">
@@ -10,6 +10,6 @@
             Summary goes here
         </p>
         <b id="poster">Posted by info here</b>
-    </lift:ListingDetails>
+    </lift:ListingDetails.showListing>
 
 </lift:surround>
