people tab stuff

--- a/src/main/webapp/profile/profile.html
+++ b/src/main/webapp/profile/profile.html
@@ -3,6 +3,7 @@
     <lift:Profile>
         <ul>
             <h6 id=name>the name goes here</h6>
+            <b id=uid>the user id goes here</b>
             <p id=summary>the bio goes here</p>
         </ul>
     </lift:Profile>
