people tab stuff

--- a/src/main/webapp/profile.html
+++ b/src/main/webapp/profile.html
@@ -5,6 +5,9 @@
             <h6 id="name">the name goes here</h6>
             <b id="uid">the user id goes here</b>
             <p id="summary">the bio goes here</p>
+            <b id="email">the email goes here</b>
+            <b id="time">the time zone goes here</b>
+            <b id="status">the status goes here</b>
         </ul>
     </lift:ProfileDetails.showPerson>
 
